--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,22 @@
-.App {
+
+.carta{
+  width: 28em;
+  height: 30em;
+  background: orange;
+  display: inline-block;
+  margin-inline: 15px;
+  margin-top: 15px;
+  border-radius: 5%;
+
+}
+.imagen{
+  padding-top: 15px;
+  padding-bottom: 15px;
+  align-items: center;
+  align-self: center;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.nombre{
+  text-align: center;
+  font-size: 25px;
 }
