--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,13 @@
   text-align: center;
   font-size: 25px;
 }
+.numero{
+  width: 28em;
+  height: 2em;
+  background-color: none;
+  user-select: none
+}
+
+img{
+  width: 400px;
+}
